# apps/fm-server/src/error.rs
@@ -64,6 +64,9 @@ fn status_for(error: &ApplicationError) -> StatusCode {
         ApplicationError::ActionNotFound(_) => StatusCode::NOT_FOUND,
         ApplicationError::ActionUnavailable(_) => StatusCode::CONFLICT,
         ApplicationError::PlatformOperationFailed(_) => StatusCode::BAD_GATEWAY,
+        ApplicationError::HostKeyUnverified { .. } | ApplicationError::HostKeyMismatch { .. } => {
+            StatusCode::CONFLICT
+        }
         ApplicationError::Internal => StatusCode::INTERNAL_SERVER_ERROR,
     }
 }
